--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                 <h3 class="contact-title ar">للاستفسارات تواصل معنا</h3>
                 <h3 class="contact-title en">For Inquiries Contact Us</h3>
                 <div class="contact-links">
-                    <a href="mailto:info@repairpage.com" class="contact-link">
+                    <a href="mailto:ghenissa203@gmail.com" class="contact-link">
                         <i class="fas fa-envelope"></i>
-                        <span>info@repairpage.com</span>
+                        <span>Gmail</span>
                     </a>
-                    <a href="tel:+1234567890" class="contact-link">
+                    <a href="tel:+213674301607" class="contact-link">
                         <i class="fas fa-phone"></i>
-                        <span>+1 (234) 567-890</span>
+                        <span>+213674301607</span>
                     </a>
                 </div>
             </div>
